freelancer projesi bitti

--- a/CSS/part-7/freelancer/public/about.html
+++ b/CSS/part-7/freelancer/public/about.html
@@ -23,12 +23,9 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link
-      rel="stylesheet"
-      href="../node_modules/owl.carousel/dist/assets/owl.carousel.min.css"
-    />
+    <link rel="stylesheet" href="css/owl.carousel.min.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <title>Document</title>
+    <title>About</title>
   </head>
   <body>
     <!-- header -->
@@ -46,144 +43,146 @@
       </div>
     </header>
 
-    <!-- section a -->
-    <section id="about__a" class="text-center py-2">
-      <div class="container">
-        <h2 class="section-title">About Me</h2>
-        <div class="border-bottom"></div>
-        <p class="lead"></p>
-        <div class="info">
-          <img src="img/profile.jpg" alt="profile" class="info__image" />
-          <div class="info__bio">
-            <h3 class="info__title">Yusuf Taha Kara</h3>
-            <h5 class="info__title" style="font-style: italic">
-              Web Developer
-            </h5>
-            <br />
-            <p>
-              Hello! I'm Yusuf Taha Kara, a final-year student of Computer
-              Engineering at Yildiz Technical University. Driven by my passion
-              for technology, I am focused on creating innovative solutions for
-              the digital world of the future.
-            </p>
-            <br />
-            <p>
-              Throughout my professional journey, I have spent over 2 years
-              honing my skills as a .NET Programmer, specializing in
-              Windows/Desktop Applications. During this time, I developed
-              accounting software, assisting clients in optimizing their
-              business processes. Thanks to my coding expertise, problem-solving
-              abilities, and analytical thinking, I successfully deliver
-              projects efficiently and with excellence.
-            </p>
-            <br />
-            <p>
-              Currently, my interest in web technologies has led me to explore
-              HTML, CSS, and Javascript, among other languages. I continuously
-              strive to improve my web development skills, designing
-              user-friendly and impressive websites with a passionate approach.
-            </p>
-            <br />
-            <p>
-              As a freelancer, I take great care to understand my clients' needs
-              and provide them with the best possible solutions to achieve their
-              goals. With a flexible and collaborative approach, I manage
-              projects efficiently and build strong business relationships with
-              my clients.
-            </p>
-            <br />
-            <p>
-              Every new day in the coding world is a discovery journey for me. I
-              am always open to embracing new technologies and advancements,
-              pushing my boundaries to deliver cutting-edge solutions. My
-              mission is to contribute to the progress of the digital world by
-              providing unique, user-focused solutions and supporting my
-              clients' successes.
-            </p>
-            <br />
-            <p>
-              If you are looking to create a distinctive and impactful website
-              or collaborate on digital projects, please feel free to get in
-              touch. Together, we can achieve remarkable outcomes!
-            </p>
-            <br />
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- section b -->
-    <section id="about__b" class="text-center py-2">
-      <div class="container">
-        <h2 class="section-title">Digital Solutions</h2>
-        <div class="border-bottom"></div>
-        <p class="lead">
-          I specialize in in Web Design and Development, offering services for
-          Responsive Websites, Custom Web Applications, and SEO-friendly
-          solutions. With a focus on client satisfaction, I also provide
-          Technical Support, Maintenance Services, and reliable Consulting &
-          Project Management.
-        </p>
-        <br />
-        <p class="lead">
-          Let's collaborate to elevate and enhance your digital project with
-          innovative solutions and cutting-edge strategies!
-        </p>
-
-        <div class="owl-carousel owl-theme">
-          <div class="service-item">
-            <img src="img/web-development.png" alt="Hizmet 1" />
-            <div class="service-details">
-              <h3>Web Design and Development</h3>
-              <p>Crafting stunning websites that captivate</p>
-            </div>
-          </div>
-          <div class="service-item">
-            <img src="img/responsive.jpg" alt="Hizmet 1" />
-            <div class="service-details">
-              <h3>Responsive Web Design</h3>
-              <p>Seamless experience on all devices</p>
-            </div>
-          </div>
-          <div class="service-item">
-            <img src="img/custom.png" alt="Hizmet 1" />
-            <div class="service-details">
-              <h3>Custom Web Applications</h3>
-              <p>Tailored solutions for your needs</p>
-            </div>
-          </div>
-          <div class="service-item">
-            <img src="img/seo.jpeg" alt="Hizmet 1" />
-            <div class="service-details">
-              <h3>SEO-Friendly Web Development</h3>
-              <p>Boosting online visibility and reach</p>
-            </div>
-          </div>
-          <div class="service-item">
-            <img src="img/tech-support.jpeg" alt="Hizmet 1" />
-            <div class="service-details">
-              <h3>Technical Support and Maintenance Services</h3>
-              <p>Reliable support for smooth operations</p>
-            </div>
-          </div>
-          <div class="service-item">
-            <img src="img/project-manager.jpg" alt="Hizmet 1" />
-            <div class="service-details">
-              <h3>Consulting and Project Management</h3>
-              <p>Expert guidance for successful projects</p>
-            </div>
-          </div>
-          <div class="service-item">
-            <img src="img/trend.jpg" alt="Hizmet 1" />
-            <div class="service-details">
-              <h3>Technology Trend Monitoring and Implementation</h3>
-              <p>Innovative solutions with trend insights</p>
+    <div id="about">
+      <!-- section a -->
+      <section id="about__a" class="text-center py-2">
+        <div class="container">
+          <h2 class="section-title">About Me</h2>
+          <div class="border-bottom"></div>
+          <p class="lead"></p>
+          <div class="info">
+            <img src="img/profile.jpg" alt="profile" class="info__image" />
+            <div class="info__bio">
+              <h3 class="info__title">Yusuf Taha Kara</h3>
+              <h5 class="info__title" style="font-style: italic">
+                Web Developer
+              </h5>
+              <br />
+              <p>
+                Hello! I'm Yusuf Taha Kara, a final-year student of Computer
+                Engineering at Yildiz Technical University. Driven by my passion
+                for technology, I am focused on creating innovative solutions
+                for the digital world of the future.
+              </p>
+              <br />
+              <p>
+                Throughout my professional journey, I have spent over 2 years
+                honing my skills as a .NET Programmer, specializing in
+                Windows/Desktop Applications. During this time, I developed
+                accounting software, assisting clients in optimizing their
+                business processes. Thanks to my coding expertise,
+                problem-solving abilities, and analytical thinking, I
+                successfully deliver projects efficiently and with excellence.
+              </p>
+              <br />
+              <p>
+                Currently, my interest in web technologies has led me to explore
+                HTML, CSS, and Javascript, among other languages. I continuously
+                strive to improve my web development skills, designing
+                user-friendly and impressive websites with a passionate
+                approach.
+              </p>
+              <br />
+              <p>
+                As a freelancer, I take great care to understand my clients'
+                needs and provide them with the best possible solutions to
+                achieve their goals. With a flexible and collaborative approach,
+                I manage projects efficiently and build strong business
+                relationships with my clients.
+              </p>
+              <br />
+              <p>
+                Every new day in the coding world is a discovery journey for me.
+                I am always open to embracing new technologies and advancements,
+                pushing my boundaries to deliver cutting-edge solutions. My
+                mission is to contribute to the progress of the digital world by
+                providing unique, user-focused solutions and supporting my
+                clients' successes.
+              </p>
+              <br />
+              <p>
+                If you are looking to create a distinctive and impactful website
+                or collaborate on digital projects, please feel free to get in
+                touch. Together, we can achieve remarkable outcomes!
+              </p>
+              <br />
             </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
+      <!-- section b -->
+      <section id="about__b" class="text-center py-2">
+        <div class="container">
+          <h2 class="section-title">Digital Solutions</h2>
+          <div class="border-bottom"></div>
+          <p class="lead">
+            I specialize in in Web Design and Development, offering services for
+            Responsive Websites, Custom Web Applications, and SEO-friendly
+            solutions. With a focus on client satisfaction, I also provide
+            Technical Support, Maintenance Services, and reliable Consulting &
+            Project Management.
+          </p>
+          <br />
+          <p class="lead">
+            Let's collaborate to elevate and enhance your digital project with
+            innovative solutions and cutting-edge strategies!
+          </p>
+
+          <div class="owl-carousel owl-theme">
+            <div class="service-item">
+              <img src="img/web-development.png" alt="Hizmet 1" />
+              <div class="service-details">
+                <h3>Web Design and Development</h3>
+                <p>Crafting stunning websites that captivate</p>
+              </div>
+            </div>
+            <div class="service-item">
+              <img src="img/responsive.jpg" alt="Hizmet 1" />
+              <div class="service-details">
+                <h3>Responsive Web Design</h3>
+                <p>Seamless experience on all devices</p>
+              </div>
+            </div>
+            <div class="service-item">
+              <img src="img/custom.png" alt="Hizmet 1" />
+              <div class="service-details">
+                <h3>Custom Web Applications</h3>
+                <p>Tailored solutions for your needs</p>
+              </div>
+            </div>
+            <div class="service-item">
+              <img src="img/seo.jpeg" alt="Hizmet 1" />
+              <div class="service-details">
+                <h3>SEO-Friendly Web Development</h3>
+                <p>Boosting online visibility and reach</p>
+              </div>
+            </div>
+            <div class="service-item">
+              <img src="img/tech-support.jpeg" alt="Hizmet 1" />
+              <div class="service-details">
+                <h3>Technical Support and Maintenance Services</h3>
+                <p>Reliable support for smooth operations</p>
+              </div>
+            </div>
+            <div class="service-item">
+              <img src="img/project-manager.jpg" alt="Hizmet 1" />
+              <div class="service-details">
+                <h3>Consulting and Project Management</h3>
+                <p>Expert guidance for successful projects</p>
+              </div>
+            </div>
+            <div class="service-item">
+              <img src="img/trend.jpg" alt="Hizmet 1" />
+              <div class="service-details">
+                <h3>Technology Trend Monitoring and Implementation</h3>
+                <p>Innovative solutions with trend insights</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </div>
     <footer id="main-footer">
       <div class="footer-content container">
         <p>Copyright &copy; 2023 All Rights Reserved</p>
@@ -200,9 +199,6 @@
         </div>
       </div>
     </footer>
-    <!-- jQuery dosyasını ekleyin -->
-    <script src="path_to_jquery.js"></script>
-
     <script src="js/jquery.min.js"></script>
     <script src="js/owl.carousel.js"></script>
     <script>
