--- a/CSS/part-7/freelancer/public/projects.html
+++ b/CSS/part-7/freelancer/public/projects.html
@@ -23,16 +23,10 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link
-      rel="stylesheet"
-      href="../node_modules/owl.carousel/dist/assets/owl.carousel.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="../node_modules/lightbox2/dist/css/lightbox.css"
-    />
+
+    <link rel="stylesheet" href="css/lightbox.min.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <title>Document</title>
+    <title>Projects</title>
   </head>
   <body>
     <!-- header -->
@@ -59,106 +53,156 @@
         <div class="items">
           <div class="item">
             <div class="item__image">
-              <a href="img/work-2.jpeg" data-lightbox="image"
-                ><img src="img/work-2.jpeg" alt=""
+              <a href="https://goldterzi.netlify.app/" target="_blank"
+                ><img src="img/gold-terzi.PNG" alt=""
               /></a>
             </div>
             <div class="item__text">
               <div class="item__text__wrap">
                 <p class="item__text__category">Web Development</p>
-                <h2 class="item__text__title">Lorem, ipsum dolor.</h2>
+                <h2 class="item__text__title">Gold Terzi</h2>
               </div>
             </div>
           </div>
           <div class="item">
             <div class="item__image">
-              <a href="img/work-2.jpeg" data-lightbox="image"
-                ><img src="img/work-2.jpeg" alt=""
+              <a
+                href="https://www.youtube.com/shorts/LIjIwgpZ9iY"
+                target="_blank"
+                ><img
+                  src="img/blur.jpg"
+                  alt="Blurred Image Detection and Correction"
               /></a>
             </div>
             <div class="item__text">
               <div class="item__text__wrap">
-                <p class="item__text__category">Web Development</p>
-                <h2 class="item__text__title">Lorem, ipsum dolor.</h2>
+                <p class="item__text__category">
+                  Mobile Application Development
+                </p>
+                <a
+                  href="https://github.com/yusuftahakara19/Blurred-Image-Detection-and-Correction"
+                  target="_blank"
+                  style="color: black"
+                >
+                  <h2 class="item__text__title">
+                    Blurred Image Detection and Correction
+                  </h2></a
+                >
               </div>
             </div>
           </div>
           <div class="item">
             <div class="item__image">
-              <a href="img/work-3.jpeg" data-lightbox="image"
-                ><img src="img/work-3.jpeg" alt=""
+              <a
+                href="https://github.com/yusuftahakara19/Ogrenci-Ev-Arkadasi-Eslestirme-Bulma-Uygulamasi"
+                target="_blank"
+                ><img src="img/home.png" alt=""
               /></a>
             </div>
             <div class="item__text">
               <div class="item__text__wrap">
-                <p class="item__text__category">Web Development</p>
-                <h2 class="item__text__title">Lorem, ipsum dolor.</h2>
+                <p class="item__text__category">
+                  Mobile Application Development - Java
+                </p>
+                <h2 class="item__text__title">Roommate Finding App</h2>
               </div>
             </div>
           </div>
           <div class="item">
             <div class="item__image">
-              <a href="#"><img src="img/work-1.jpeg" alt="" /></a>
+              <a
+                href="https://github.com/yusuftahakara19/Mini-Mezun-Uygulamasi"
+                target="_blank"
+                ><img src="img/mezun.jpg" alt=""
+              /></a>
             </div>
             <div class="item__text">
               <div class="item__text__wrap">
-                <p class="item__text__category">Web Development</p>
-                <h2 class="item__text__title">Lorem, ipsum dolor.</h2>
+                <p class="item__text__category">
+                  Mobile Application Development
+                </p>
+                <h2 class="item__text__title">School Graduates App</h2>
               </div>
             </div>
           </div>
           <div class="item">
             <div class="item__image">
-              <a href="#"><img src="img/work-2.jpeg" alt="" /></a>
+              <a href="https://linktr.ee/mianaliz" target="_blank"
+                ><img src="img/mianaliz.png" alt=""
+              /></a>
             </div>
             <div class="item__text">
               <div class="item__text__wrap">
-                <p class="item__text__category">Web Development</p>
-                <h2 class="item__text__title">Lorem, ipsum dolor.</h2>
+                <p class="item__text__category">
+                  Windows\Desktop Application - .NET
+                </p>
+                <h2 class="item__text__title">MiAnaliz</h2>
               </div>
             </div>
           </div>
           <div class="item">
             <div class="item__image">
-              <a href="#"><img src="img/work-1.jpeg" alt="" /></a>
+              <a
+                href="https://github.com/yusuftahakara19/Hospital-Management-System"
+                target="_blank"
+                ><img src="img/hastane.PNG" alt=""
+              /></a>
             </div>
             <div class="item__text">
               <div class="item__text__wrap">
-                <p class="item__text__category">Web Development</p>
-                <h2 class="item__text__title">Lorem, ipsum dolor.</h2>
+                <p class="item__text__category">
+                  Windows\Desktop Application - .NET
+                </p>
+                <h2 class="item__text__title">Hospital Management System</h2>
               </div>
             </div>
           </div>
           <div class="item">
             <div class="item__image">
-              <a href="#"><img src="img/work-3.jpeg" alt="" /></a>
+              <a
+                href="https://github.com/yusuftahakara19/Nerdlegame/tree/main"
+                target="_blank"
+                ><img src="img/nerdle.png" alt=""
+              /></a>
             </div>
             <div class="item__text">
               <div class="item__text__wrap">
-                <p class="item__text__category">Web Development</p>
-                <h2 class="item__text__title">Lorem, ipsum dolor.</h2>
+                <p class="item__text__category">Desktop App- Java</p>
+                <h2 class="item__text__title">Nerdle Game</h2>
               </div>
             </div>
           </div>
           <div class="item">
             <div class="item__image">
-              <a href="#"><img src="img/work-1.jpeg" alt="" /></a>
+              <a
+                href="https://github.com/yusuftahakara19/FitTakSis"
+                target="_blank"
+                ><img src="img/fitnes.jpg" alt=""
+              /></a>
             </div>
             <div class="item__text">
               <div class="item__text__wrap">
-                <p class="item__text__category">Web Development</p>
-                <h2 class="item__text__title">Lorem, ipsum dolor.</h2>
+                <p class="item__text__category">
+                  Windows\Desktop Application - .NET
+                </p>
+                <h2 class="item__text__title">Fitness Tracking System</h2>
               </div>
             </div>
           </div>
           <div class="item">
             <div class="item__image">
-              <a href="#"><img src="img/work-1.jpeg" alt="" /></a>
+              <a
+                href="https://github.com/yusuftahakara19/Employee-Management-System"
+                target="_blank"
+                ><img src="img/employee.jpg" alt=""
+              /></a>
             </div>
             <div class="item__text">
               <div class="item__text__wrap">
-                <p class="item__text__category">Web Development</p>
-                <h2 class="item__text__title">Lorem, ipsum dolor.</h2>
+                <p class="item__text__category">
+                  Windows\Desktop Application - .NET
+                </p>
+                <h2 class="item__text__title">Employee-Management-System</h2>
               </div>
             </div>
           </div>
@@ -183,6 +227,6 @@
       </div>
     </footer>
     <script src="js/jquery.min.js"></script>
-    <script src="../node_modules/lightbox2/dist/css/lightbox.css"></script>
+    <script src="js/lightbox.min.js"></script>
   </body>
 </html>
