--- a/CSS/part-7/freelancer/public/index.html
+++ b/CSS/part-7/freelancer/public/index.html
@@ -24,7 +24,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="css/main.css" />
-    <title>Document</title>
+    <title>Home</title>
   </head>
   <body>
     <!-- header -->
