--- a/Bootstrap/part-1/awesome-blog/index.html
+++ b/Bootstrap/part-1/awesome-blog/index.html
@@ -37,7 +37,7 @@
         <div id="mobile" class="collapse navbar-collapse">
           <ul class="navbar-nav me-auto">
             <li class="nav-item">
-              <a href="index.html" class="nav-link">Home</a>
+              <a href="index.html" class="nav-link active">Home</a>
             </li>
             <li class="nav-item">
               <a href="blogs.html" class="nav-link">Blogs</a>
@@ -62,6 +62,148 @@
         </div>
       </div>
     </nav>
+
+    <header>
+      <div class="text-center pt-5 mt-5 px-4 border-bottom">
+        <h1 class="display-4 fw-bold">Awesome Blog</h1>
+        <div class="col-lg-6 mx-auto">
+          <p class="lead mb-4">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa quos
+            tempora sunt nulla. Sequi facere dicta officia error itaque
+            repudiandae.
+          </p>
+        </div>
+        <div
+          class="mb-5 d-grid gap-2 col-6 mx-auto d-md-flex justify-content-md-center"
+        >
+          <button class="btn btn-primary btn-lg">
+            <i class="fa-solid fa-caret-right"></i> Button
+          </button>
+          <button class="btn btn-outline-secondary btn-lg">
+            <i class="fa-solid fa-caret-right"></i> Button
+          </button>
+        </div>
+        <div style="max-height: 30vh" class="overflow-hidden">
+          <div class="container px-5">
+            <img
+              src="img/bg.png"
+              class="img-fluid border rounded-3 shadow-lg mb-4"
+              width="700"
+              height="500"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <main>
+      <div class="bg-dark px-4 py-5 text-center text-white">
+        <div class="py-5">
+          <h1 class="display-5 fw-bold">Lorem, ipsum dolor.</h1>
+          <div class="col-lg-6 mx-auto">
+            <p class="lead mb-4">
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Culpa
+              quos tempora sunt nulla. Sequi facere dicta officia error itaque
+              repudiandae.
+            </p>
+          </div>
+          <div
+            class="d-grid gap-2 col-6 mx-auto d-md-flex justify-content-md-center"
+          >
+            <button class="btn btn-outline-warning btn-lg">
+              <i class="fa-solid fa-caret-right"></i> Button
+            </button>
+            <button class="btn btn-outline-light btn-lg">
+              <i class="fa-solid fa-caret-right"></i> Button
+            </button>
+          </div>
+        </div>
+      </div>
+
+      <div class="container my-4">
+        <div class="row row-cols-1 row-cols-lg-3 row-cols-md-2 g-4">
+          <div class="col">
+            <div class="card mb-3 shadow">
+              <img src="img/1.jpeg" class="card-img-top" />
+              <div class="card-body">
+                <h5 class="card-title">Lorem, ipsum.</h5>
+                <p class="card-text">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Exercitationem, quia!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card mb-3 shadow">
+              <img src="img/2.jpeg" class="card-img-top" />
+              <div class="card-body">
+                <h5 class="card-title">Lorem, ipsum.</h5>
+                <p class="card-text">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Exercitationem, quia!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card mb-3 shadow">
+              <img src="img/3.jpeg" class="card-img-top" />
+              <div class="card-body">
+                <h5 class="card-title">Lorem, ipsum.</h5>
+                <p class="card-text">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Exercitationem, quia!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card mb-3 shadow">
+              <img src="img/4.jpeg" class="card-img-top" />
+              <div class="card-body">
+                <h5 class="card-title">Lorem, ipsum.</h5>
+                <p class="card-text">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Exercitationem, quia!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card mb-3 shadow">
+              <img src="img/5.jpeg" class="card-img-top" />
+              <div class="card-body">
+                <h5 class="card-title">Lorem, ipsum.</h5>
+                <p class="card-text">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Exercitationem, quia!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card mb-3 shadow">
+              <img src="img/6.jpeg" class="card-img-top" />
+              <div class="card-body">
+                <h5 class="card-title">Lorem, ipsum.</h5>
+                <p class="card-text">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Exercitationem, quia!
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <footer class="py-5 bg-dark text-white">
+      <div class="container text-center">
+        <span>All Rights Reserved. @2025</span>
+      </div>
+    </footer>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
