Quiz App finished

--- a/Javascript/part-2/quiz-app/index.html
+++ b/Javascript/part-2/quiz-app/index.html
@@ -25,8 +25,15 @@
     </div>
 
     <div class="card quiz_box">
-      <header class="card-header">
+      <header
+        class="card-header d-flex justify-content-between align-items-center"
+      >
         <div class="title">Quiz App</div>
+        <div class="timer d-flex align-items-center p-1 rounded">
+          <div class="time_text">Kalan Süre</div>
+          <div class="time_second">10</div>
+        </div>
+        <div class="time_line"></div>
       </header>
       <section class="card-body">
         <div class="question_text">
