--- a/Javascript/part-3/ music-player/index.html
+++ b/Javascript/part-3/ music-player/index.html
@@ -12,25 +12,94 @@
     />
     <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
-      <img id="music-image" src="" alt="" />
-      <audio id="audio" src=""></audio>
-      <div id="music-details">
-        <p class="title"></p>
-        <p class="singer"></p>
-      </div>
-      <div id="controls">
-        <i id="prev" class="fa-solid fa-backward-step"></i>
-        <i id="play" class="fa-solid fa-play"></i>
-        <i id="next" class="fa-solid fa-forward-step"></i>
+    <div class="card shadow-lg rounded">
+      <div class="container p-0">
+        <img id="music-image" class="card-img-top" src="" alt="" />
+        <audio id="audio" src=""></audio>
+        <div id="music-details" class="text-center border-bottom my-1">
+          <p class="title"></p>
+          <p class="singer"></p>
+        </div>
+
+        <div class="card-body">
+          <div>
+            <input type="range" id="progress-bar" class="form-range" />
+
+            <div class="times d-flex justify-content-between">
+              <span class="current-time badge bg-primary">0:00</span>
+              <span class="duration badge badge bg-primary">0:00</span>
+            </div>
+          </div>
+
+          <div id="controls" class="w-100 text-center">
+            <button class="button btn-primary rounded-circle" id="prev">
+              <i class="fa-solid fa-backward-step"></i>
+            </button>
+            <button
+              class="button btn-primary rounded-circle btn-lg mx-2"
+              id="play"
+            >
+              <i class="fa-solid fa-play"></i>
+            </button>
+            <button class="button btn-primary rounded-circle" id="next">
+              <i class="fa-solid fa-forward-step"></i>
+            </button>
+          </div>
+        </div>
+
+        <div
+          class="card-footer d-flex justify-content-between alignt-items-center"
+        >
+          <button
+            id="music-list-open"
+            class="btn btn-primary btn-sm"
+            data-bs-toggle="collapse"
+            data-bs-target="#music-list"
+          >
+            <i class="fa-solid fa-bars"></i>
+          </button>
+          <div
+            class="volume-container d-flex justify-content-between align-items-center"
+          >
+            <i id="volume-icon" class="fa-solid fa-volume-high"></i>
+            <input
+              type="range"
+              id="volume_bar"
+              max="100"
+              value="100"
+              class="form-range ms-2"
+            />
+          </div>
+        </div>
+
+        <div id="music-list" class="collapse">
+          <ul id="music-list-ul" class="list-group list-group-flush">
+            <!-- <li
+              class="list-group-item d-flex justify-content-between align-items-center"
+            >
+              <span>Boşver - Nilüfer</span>
+              <span class="badge bg-primary rounded-pill">3:40</span>
+            </li> -->
+          </ul>
+        </div>
       </div>
     </div>
-
     <script src="music.js"></script>
     <script src="musicplayer.js"></script>
     <script src="app.js"></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
