--- a/Javascript/part-4/promise-2.html
+++ b/Javascript/part-4/promise-2.html
@@ -39,7 +39,7 @@
         });
       };
 
-      login("ytakara", "1234")
+      login("ytkara", "1234")
         .then((user) => {
           console.log(user);
           return getPostByUserName(user.userName);
